# cgc-repair

./: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  install_cgc.sh  requirements.txt  setup.py  setup_psql.sh
cgcrepair/: main.py
cgcrepair/controllers/: base.py  corpus.py  database.py  instance.py  operations.py  simple_operation.py  task.py
cgcrepair/core/: exc.py  interfaces.py  tests.py
cgcrepair/core/corpus/: challenge.py  cwe_parser.py  manifest.py  snippet.py  source_file.py
cgcrepair/core/data/: store.py
cgcrepair/core/handlers/: commands.py  configurations.py  corpus.py  database.py  runner.py
cgcrepair/core/handlers/operations/: checkout.py  compile.py  genpolls.py  genpovs.py  make.py  test.py
cgcrepair/core/handlers/tasks/: sanity.py
cgcrepair/ext/hooks/: init.py
cgcrepair/templates/: list.jinja2  sanity.jinja2
cgcrepair/utils/: data.py  helpers.py
cgcrepair/utils/parse/: cwe.py  test_result.py
cmake/: CMakeLists.txt  CMakeListsNoPatch.txt
config/: cgcrepair.yml  cgcrepair.yml.example
lib/: metadata.yml
lib/include/: CMakeLists.txt
lib/include/libpov/: CMakeLists.txt
lib/include/tiny-AES128-C/: CMakeLists.txt
scripts/: install_cgc.sh  install_cgc_lib.sh  ubuntu14_setup.sh
tests/: test_cgcrepair.py
tools/: cb-replay-pov.py  cb-replay.py  cb-test.py  challenge_runner.py  cwe_dict.csv
tools/generate-polls/: generate-polls
